--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
   "description": "",
   "dependencies": {
     "backend": "file:",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "fabric-ca-client": "^2.2.20",
     "fabric-network": "^2.2.20"
   }
